--- a/loraMesh/loraMesh.html
+++ b/loraMesh/loraMesh.html
@@ -340,9 +340,9 @@ body.theme-light .bat-low{  color:#dc2626; }
 const MQTT_URL = "wss://broker.hivemq.com:8884/mqtt";
 const ROUTER_ID = 50;
 
-const GW_TIMEOUT_MS = 20000;
+const GW_TIMEOUT_MS = 60000;
 const NODE_TIMEOUT_MS = 70000;
-const ROUTER_TIMEOUT_MS = 70000;
+const ROUTER_TIMEOUT_MS = 130000;   // ✅ Router 60초 응답 구조 대응(2분10초)
 
 const TOPIC_TELEM_SUB      = "tswell/lora/node/+/telemetry";
 const TOPIC_LEDSTATE_SUB   = "tswell/lora/node/+/led_state";
@@ -592,7 +592,7 @@ function renderTable(){
     if(n.t==null || n.rh==null || n.vib==null) naCount++;
 
     const tr = document.createElement("tr");
-    
+
     let batClass = "";
     if(n.bat!=null){
       if(n.bat <= 3.00) batClass = "bat-low";
