--- a/homeRMC/homeRMC.html
+++ b/homeRMC/homeRMC.html
@@ -23,42 +23,42 @@
 <style>
   :root{
     --bgA:#2b2f3a; --bgB:#1f2430;
-    --frameStroke: rgba(255,255,255,.12);
-
     --card:#2a3040; --card2:#242a38;
     --stroke:rgba(255,255,255,.10);
-
     --text:#f5f7ff; --sub:#c6cee6;
+
     --green:#37ff79; --greenSoft:rgba(55,255,121,.14);
     --danger:#ff4c4c;
 
-    --shadow: 0 16px 34px rgba(0,0,0,.38);
+    --shadow: 0 14px 30px rgba(0,0,0,.35);
     --shadowSoft: 0 10px 22px rgba(0,0,0,.22);
 
-    --btnStroke: rgba(255,255,255,.14);
-
+    --btnStroke: rgba(255,255,255,.12);
     --glow: 0 0 14px rgba(55,255,121,.35), 0 0 28px rgba(55,255,121,.18);
     --textGlow: 0 0 10px rgba(255,255,255,.12);
+
+    /* ✅ 단색 Gray(야간) */
+    --btnSolid:#3b3f4a;
   }
 
   body.theme-light{
     --bgA:#f4f6ff; --bgB:#eef2ff;
-    --frameStroke: rgba(15,23,42,.12);
-
     --card:#ffffff; --card2:#f7f9ff;
     --stroke:rgba(15,23,42,.10);
-
     --text:#111827; --sub:#6b7280;
+
     --green:#16a34a; --greenSoft:rgba(22,163,74,.12);
     --danger:#dc2626;
 
-    --shadow: 0 14px 32px rgba(15,23,42,.10);
+    --shadow: 0 12px 28px rgba(15,23,42,.10);
     --shadowSoft: 0 10px 22px rgba(15,23,42,.10);
 
     --btnStroke: rgba(15,23,42,.14);
-
     --glow: 0 0 12px rgba(22,163,74,.20), 0 0 24px rgba(22,163,74,.10);
     --textGlow: 0 0 10px rgba(15,23,42,.10);
+
+    /* ✅ 단색 Gray(주간) */
+    --btnSolid:#e9edf5;
   }
 
   *{box-sizing:border-box;}
@@ -68,60 +68,29 @@
     background: radial-gradient(circle at top, var(--bgA) 0, var(--bgB) 55%, #151925 100%);
     color:var(--text);
     transition: background .25s ease, color .25s ease;
-    display:flex;
-    justify-content:center;
-    padding: 10px 0;
+    display:flex; justify-content:center;
   }
   body.theme-light{
     background: radial-gradient(circle at top, #e5edff 0, #f9fafb 45%, #e5e7eb 100%);
   }
 
-  /* ✅ 전체 외곽 프레임 */
-  .frame{
-    width: 360px;
-    max-width: 100vw;
-    padding: 14px 12px 18px;
-    border-radius: 24px;
-    border: 1px solid var(--frameStroke);
-    box-shadow: var(--shadow);
-    background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
-    backdrop-filter: blur(6px);
-  }
+  .wrap{ width:360px; max-width:100vw; padding:14px 12px 18px; }
 
-  /* TITLE */
-  .titleRow{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap:12px;
-    margin: 6px 0 12px;
-  }
+  .titleRow{ display:flex; align-items:center; justify-content:space-between; gap:12px; margin:6px 0 12px; }
 
-  /* ✅ 타이틀 (30px) */
   .heroTitle{
-    font-size: 30px;
-    font-weight: 900;
-    letter-spacing: .02em;
-    line-height: 1.02;
-
-    background: linear-gradient(180deg, rgba(255,255,255,.98), rgba(210,220,255,.78));
-    -webkit-background-clip:text;
-    background-clip:text;
-    color: transparent;
-
-    text-shadow:
-      0 1px 0 rgba(255,255,255,.18),
-      0 2px 10px rgba(0,0,0,.30),
-      var(--textGlow);
+    font-size:28px;
+    font-weight:900;
+    letter-spacing:.02em;
+    line-height:1.05;
+    background: linear-gradient(180deg, rgba(255,255,255,.98), rgba(210,220,255,.80));
+    -webkit-background-clip:text; background-clip:text; color:transparent;
+    text-shadow: 0 1px 0 rgba(255,255,255,.20), 0 2px 8px rgba(0,0,0,.28), var(--textGlow);
   }
   body.theme-light .heroTitle{
-    background: linear-gradient(180deg, rgba(17,24,39,.98), rgba(55,65,81,.70));
-    -webkit-background-clip:text;
-    background-clip:text;
-    color: transparent;
-    text-shadow:
-      0 1px 0 rgba(255,255,255,.35),
-      0 2px 8px rgba(15,23,42,.18);
+    background: linear-gradient(180deg, rgba(17,24,39,.98), rgba(55,65,81,.72));
+    -webkit-background-clip:text; background-clip:text; color:transparent;
+    text-shadow: 0 1px 0 rgba(255,255,255,.35), 0 2px 6px rgba(15,23,42,.18);
   }
 
   .themeToggle{
@@ -131,11 +100,8 @@
     background:rgba(15,23,42,0.45);
     color:var(--text);
     font-size:16px;
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    cursor:pointer;
-    transition: all .18s;
+    display:inline-flex; align-items:center; justify-content:center;
+    cursor:pointer; transition:all .18s;
     min-width:44px;
     box-shadow: var(--shadowSoft);
   }
@@ -144,219 +110,157 @@
     color:#111827;
     border-color:rgba(99,102,241,0.25);
   }
-  .themeToggle:active{transform:scale(.98);}
+  .themeToggle:active{ transform:scale(.98); }
 
-  /* STATUS PANEL */
   .panel{
     background: linear-gradient(180deg, var(--card), var(--card2));
     border:1px solid var(--stroke);
     border-radius:18px;
     padding:12px;
-    box-shadow: var(--shadowSoft);
+    box-shadow: var(--shadow);
   }
-
-  .statusRow{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap:10px;
-  }
-  .leftBlock{
-    display:flex;
-    align-items:center;
-    gap:10px;
-    flex:1;
-    min-width:0;
-  }
+  .statusRow{ display:flex; align-items:center; justify-content:space-between; gap:10px; }
+  .leftBlock{ display:flex; align-items:center; gap:10px; flex:1; min-width:0; }
 
   .pill{
-    height:34px;
-    padding:0 12px;
-    border-radius:999px;
-    display:inline-flex;
-    align-items:center;
-    gap:7px;
-    font-size:12px;
-    font-weight:800;
+    height:34px; padding:0 12px; border-radius:999px;
+    display:inline-flex; align-items:center; gap:7px;
+    font-size:12px; font-weight:800;
     border:1px solid rgba(148,163,184,0.35);
-    background: rgba(255,255,255,.06);
-    color: var(--sub);
+    background:rgba(255,255,255,.06);
+    color:var(--sub);
     white-space:nowrap;
   }
-
   .pill.ok{
-    border-color: rgba(55,255,121,0.55);
-    background: var(--greenSoft);
-    color: var(--text);
-    box-shadow: var(--glow);
+    border-color:rgba(55,255,121,0.55);
+    background:var(--greenSoft);
+    color:var(--text);
+    box-shadow:var(--glow);
   }
   .pill.bad{
-    border-color: rgba(255,76,76,0.55);
-    background: rgba(255,76,76,0.12);
-    color: var(--text);
-    box-shadow: 0 0 12px rgba(255,76,76,0.18);
+    border-color:rgba(255,76,76,0.55);
+    background:rgba(255,76,76,0.12);
+    color:var(--text);
+    box-shadow:0 0 12px rgba(255,76,76,0.18);
   }
 
   .gatewayPill{
-    height:34px;
-    flex:1;
-    min-width:0;
+    height:34px; flex:1; min-width:0;
     border-radius:999px;
     border:1px solid rgba(55,255,121,0.75);
     background: rgba(10,14,20,.55);
     color: var(--green);
-    font-weight:800;
-    font-size:12.5px;
-    display:flex;
-    align-items:center;
+    font-weight:800; font-size:12.5px;
+    display:flex; align-items:center;
     padding:0 12px;
     box-shadow: var(--glow);
     overflow:hidden;
   }
-
   body.theme-light .gatewayPill{
     background: linear-gradient(180deg,#eafff3,#d9ffe9);
     border-color: rgba(22,163,74,.40);
     color:#0f5132;
     box-shadow: 0 6px 16px rgba(22,163,74,.14);
   }
-
-  .gatewayPill .left{
-    font-weight:900;
-    letter-spacing:.2px;
-    margin-right:10px;
-    white-space:nowrap;
-  }
-  .gatewayPill .right{
-    margin-left:auto;
-    white-space:nowrap;
-    color: var(--text);
-    opacity:.95;
-    font-weight:800;
-  }
-  body.theme-light .gatewayPill .right{
-    color:#0f5132;
-  }
+  .gatewayPill .left{ font-weight:900; letter-spacing:.2px; margin-right:10px; white-space:nowrap; }
+  .gatewayPill .right{ margin-left:auto; white-space:nowrap; color:var(--text); opacity:.95; font-weight:800; }
+  body.theme-light .gatewayPill .right{ color:#0f5132; }
 
   .resetBtn{
-    height:34px;
-    padding:0 14px;
-    border-radius:999px;
+    height:34px; padding:0 14px; border-radius:999px;
     border:1px solid rgba(55,255,121,0.65);
     background: linear-gradient(180deg, rgba(22,163,74,.95), rgba(22,163,74,.75));
     color:#ecfdf5;
-    font-weight:900;
-    font-size:12px;
-    letter-spacing:.3px;
+    font-weight:900; font-size:12px; letter-spacing:.3px;
     cursor:pointer;
     box-shadow: 0 10px 20px rgba(22,163,74,0.18);
     white-space:nowrap;
   }
-  .resetBtn:active{transform:scale(.98);}
+  .resetBtn:active{ transform:scale(.98); }
 
-  /* ✅ 3D CONTROL BUTTONS */
   .grid{
-    margin-top:14px;
+    margin-top:12px;
     display:grid;
     grid-template-columns:1fr;
     gap:12px;
   }
 
+  /* ✅ 4개 제어 버튼 - 단색 Gray + 야간 입체감 강화 */
   .bigbtn{
-    height: 100px;
-    border-radius: 20px;
-    border: 1px solid var(--btnStroke);
+    height:104px;
+    border-radius:18px;
+    border:1px solid rgba(255,255,255,.14);
+    background: var(--btnSolid);
 
-    /* ✅ 입체감 그라데이션 */
-    background: linear-gradient(180deg,
-      rgba(255,255,255,.16) 0%,
-      rgba(255,255,255,.08) 35%,
-      rgba(0,0,0,.12) 100%
-    );
-
+    /* ✅ (NEW) 야간 입체감 더 강하게 */
     box-shadow:
-      0 18px 34px rgba(0,0,0,.28),
-      inset 0 1px 0 rgba(255,255,255,.25),
-      inset 0 -10px 20px rgba(0,0,0,.18);
+      0 26px 46px rgba(0,0,0,.55),        /* 깊은 외부 그림자 */
+      0 10px 16px rgba(0,0,0,.35),
+      inset 0 2px 0 rgba(255,255,255,.14), /* 상단 하이라이트 */
+      inset 0 -14px 26px rgba(0,0,0,.35),  /* 하단 깊은 음영 */
+      inset 0 0 0 1px rgba(255,255,255,.06);
 
     cursor:pointer;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    gap:10px;
+    display:flex; align-items:center; justify-content:center; gap:10px;
     transition: transform .12s, box-shadow .18s, filter .18s;
     user-select:none;
-    position: relative;
+    position:relative;
     overflow:hidden;
   }
 
-  /* ✅ 상단 빛 반사 */
-  .bigbtn::before{
-    content:"";
-    position:absolute;
-    top:-40%;
-    left:-20%;
-    width:140%;
-    height:80%;
-    background: radial-gradient(circle at top,
-      rgba(255,255,255,.18),
-      rgba(255,255,255,0)
-    );
-    transform: rotate(8deg);
-    opacity:.9;
-    pointer-events:none;
-  }
+  /* ✅ 대각선 하이라이트 완전 제거 */
+  .bigbtn::before{ display:none !important; }
 
-  .bigbtn:hover{ filter: brightness(1.05); }
+  .bigbtn:hover{ filter:brightness(1.06); }
 
   .bigbtn:active{
     transform: translateY(3px) scale(.985);
     box-shadow:
-      0 10px 22px rgba(0,0,0,.25),
-      inset 0 1px 0 rgba(255,255,255,.20),
-      inset 0 -8px 16px rgba(0,0,0,.22);
+      0 14px 26px rgba(0,0,0,.42),
+      inset 0 1px 0 rgba(255,255,255,.10),
+      inset 0 -10px 18px rgba(0,0,0,.36);
   }
 
   .bigbtn.sent{
-    border-color: rgba(55,255,121,0.60);
+    border-color: rgba(55,255,121,0.55);
     box-shadow:
-      0 0 22px rgba(55,255,121,0.22),
-      0 18px 34px rgba(0,0,0,.28),
-      inset 0 1px 0 rgba(255,255,255,.25),
-      inset 0 -10px 20px rgba(0,0,0,.18);
-    filter: brightness(1.08);
+      0 0 26px rgba(55,255,121,0.22),
+      0 26px 46px rgba(0,0,0,.55),
+      inset 0 2px 0 rgba(255,255,255,.14),
+      inset 0 -14px 26px rgba(0,0,0,.35);
+    filter: brightness(1.10);
   }
 
   .bigbtn.loading{ opacity:.75; pointer-events:none; }
 
-  .icon{ font-size:17px; opacity:.95; }
+  .icon{ font-size:16px; opacity:.9; }
 
   .btnLabel{
-    font-size: 21px;
-    font-weight: 900;
-    letter-spacing: .05em;
-
-    background: linear-gradient(180deg, rgba(255,255,255,.96), rgba(210,220,255,.75));
+    font-size:19px;
+    font-weight:900;
+    letter-spacing:.05em;
+    background: linear-gradient(180deg, rgba(255,255,255,.95), rgba(210,220,255,.78));
     -webkit-background-clip:text;
     background-clip:text;
-    color: transparent;
+    color:transparent;
+    text-shadow: 0 1px 0 rgba(255,255,255,.18), 0 2px 8px rgba(0,0,0,.30), var(--textGlow);
+  }
 
-    text-shadow:
-      0 1px 0 rgba(255,255,255,.18),
-      0 2px 10px rgba(0,0,0,.30),
-      var(--textGlow);
+  body.theme-light .bigbtn{
+    border-color: rgba(15,23,42,.12);
+    box-shadow:
+      0 14px 28px rgba(15,23,42,.12),
+      inset 0 1px 0 rgba(255,255,255,.80),
+      inset 0 -10px 18px rgba(15,23,42,.08);
   }
   body.theme-light .btnLabel{
     background: linear-gradient(180deg, rgba(17,24,39,.98), rgba(55,65,81,.70));
     -webkit-background-clip:text;
     background-clip:text;
-    color: transparent;
-    text-shadow:
-      0 1px 0 rgba(255,255,255,.35),
-      0 2px 8px rgba(15,23,42,.18);
+    color:transparent;
+    text-shadow: 0 1px 0 rgba(255,255,255,.35), 0 2px 6px rgba(15,23,42,.16);
   }
 
-  /* FOOTER */
   .footer{
     margin-top:12px;
     display:flex;
@@ -366,23 +270,18 @@
   }
   .datetime{
     font-size:12.5px;
-    color: var(--sub);
+    color:var(--sub);
     font-weight:700;
   }
 
   .bugBtn{
-    height:34px;
-    padding:0 12px;
-    border-radius:999px;
+    height:34px; padding:0 12px; border-radius:999px;
     border:1px solid rgba(148,163,184,0.35);
     background: rgba(255,255,255,.06);
     color: var(--sub);
     cursor:pointer;
-    display:flex;
-    align-items:center;
-    gap:6px;
-    font-size:12px;
-    font-weight:800;
+    display:flex; align-items:center; gap:6px;
+    font-size:12px; font-weight:800;
     box-shadow: var(--shadowSoft);
     user-select:none;
   }
@@ -392,7 +291,7 @@
     box-shadow: 0 0 12px rgba(34,197,94,0.35);
     border-color: transparent;
   }
-  .bugBtn:active{transform:scale(.98);}
+  .bugBtn:active{ transform:scale(.98); }
 
   .logPanel{
     margin-top:10px;
@@ -422,42 +321,42 @@
 </head>
 
 <body>
-  <div class="frame">
+<div class="wrap">
 
-    <div class="titleRow">
-      <div class="heroTitle">Home IoT System</div>
-      <button class="themeToggle" type="button" onclick="toggleTheme()">
-        <span id="themeIcon">🌙</span>
-      </button>
-    </div>
-
-    <div class="panel">
-      <div class="statusRow">
-        <div class="leftBlock">
-          <span id="mqttPill" class="pill">MQTT</span>
-          <div class="gatewayPill">
-            <span class="left">장비연결</span>
-            <span id="rssiText" class="right">-- dBm</span>
-          </div>
-        </div>
-        <button class="resetBtn" onclick="sendReset()">RESET</button>
-      </div>
-    </div>
-
-    <div class="grid">
-      <button class="bigbtn" onclick="sendCmd(this,'LIGHT')"><span class="icon">💡</span><span class="btnLabel">LIGHT</span></button>
-      <button class="bigbtn" onclick="sendCmd(this,'SPK1')"><span class="icon">🔊</span><span class="btnLabel">SPK1</span></button>
-      <button class="bigbtn" onclick="sendCmd(this,'SPK2')"><span class="icon">📢</span><span class="btnLabel">SPK2</span></button>
-      <button class="bigbtn" onclick="sendCmd(this,'DOOR')"><span class="icon">🚪</span><span class="btnLabel">DOOR</span></button>
-    </div>
-
-    <div class="footer">
-      <div id="dt" class="datetime">--</div>
-      <button id="btnLog" class="bugBtn" type="button" onclick="toggleLog()"><span class="icon">🐞</span><span>로그</span></button>
-    </div>
-
-    <div id="logPanel" class="logPanel"></div>
+  <div class="titleRow">
+    <div class="heroTitle">Home IoT System</div>
+    <button class="themeToggle" type="button" onclick="toggleTheme()">
+      <span id="themeIcon">🌙</span>
+    </button>
   </div>
+
+  <div class="panel">
+    <div class="statusRow">
+      <div class="leftBlock">
+        <span id="mqttPill" class="pill">MQTT</span>
+        <div class="gatewayPill">
+          <span class="left">장비연결</span>
+          <span id="rssiText" class="right">-- dBm</span>
+        </div>
+      </div>
+      <button class="resetBtn" onclick="sendReset()">RESET</button>
+    </div>
+  </div>
+
+  <div class="grid">
+    <button class="bigbtn" onclick="sendCmd(this,'LIGHT')"><span class="icon">💡</span><span class="btnLabel">LIGHT</span></button>
+    <button class="bigbtn" onclick="sendCmd(this,'SPK1')"><span class="icon">🔊</span><span class="btnLabel">SPK1</span></button>
+    <button class="bigbtn" onclick="sendCmd(this,'SPK2')"><span class="icon">📢</span><span class="btnLabel">SPK2</span></button>
+    <button class="bigbtn" onclick="sendCmd(this,'DOOR')"><span class="icon">🚪</span><span class="btnLabel">DOOR</span></button>
+  </div>
+
+  <div class="footer">
+    <div id="dt" class="datetime">--</div>
+    <button id="btnLog" class="bugBtn" type="button" onclick="toggleLog()"><span class="icon">🐞</span><span>로그</span></button>
+  </div>
+
+  <div id="logPanel" class="logPanel"></div>
+</div>
 
 <script>
 /* ✅ Service Worker 등록 */
@@ -489,11 +388,13 @@ function addLog(msg){
   logPanel.appendChild(div);
   logPanel.scrollTop = logPanel.scrollHeight;
 }
+
 function toggleLog(){
   const visible = (logPanel.style.display === "block");
   logPanel.style.display = visible ? "none" : "block";
   btnLog.classList.toggle("active", !visible);
 }
+
 function updateDateTime(){
   const d=new Date();
   const y=d.getFullYear();
@@ -507,7 +408,7 @@ function updateDateTime(){
 setInterval(updateDateTime,1000);
 updateDateTime();
 
-/* ✅ 디폴트는 야간 모드 */
+/* Theme */
 function applyTheme(theme){
   const isLight = (theme === "light");
   document.body.classList.toggle("theme-light", isLight);
@@ -519,8 +420,7 @@ function toggleTheme(){
   localStorage.setItem("hcs-theme", next);
   applyTheme(next);
 }
-
-/* ✅ localStorage 값 없으면 무조건 dark */
+/* ✅ 디폴트 야간 모드 */
 applyTheme(localStorage.getItem("hcs-theme") || "dark");
 
 /* MQTT connect */
@@ -544,13 +444,11 @@ client.on("close", ()=>{
 client.on("message", (topic, msg)=>{
   const text = msg.toString();
   if(topic === TOPIC_LOG){ addLog(text); return; }
-
   if(topic === TOPIC_STATUS){
     try{
       const j = JSON.parse(text);
       const mqttOk = !!j.mqtt;
       const rssi   = (typeof j.rssi === "number") ? j.rssi : "--";
-
       mqttPill.className = "pill " + (mqttOk ? "ok" : "bad");
       mqttPill.textContent = mqttOk ? "MQTT OK" : "MQTT OFF";
       rssiText.textContent = `${rssi} dBm`;
@@ -567,7 +465,7 @@ function publishCmd(cmd){
   return true;
 }
 
-/* 눌림 표시 길게 */
+/* ✅ 눌림 표시 길게 */
 const PRESS_MS = 900;
 function sendCmd(btn, cmd){
   btn.classList.add("sent","loading");
@@ -577,6 +475,7 @@ function sendCmd(btn, cmd){
   addLog(ok ? `SEND ${cmd}` : `FAIL ${cmd}`);
   setTimeout(()=>btn.classList.remove("loading"), 250);
 }
+
 function sendReset(){
   const ok = publishCmd("reset");
   addLog(ok ? "SEND reset" : "FAIL reset");
